Fixes mobile spacing of profile names.

--- a/wp-content/themes/specular/custom_templates/profiles.css
+++ b/wp-content/themes/specular/custom_templates/profiles.css
@@ -40,5 +40,7 @@
         display:block;
         margin:auto;
         float:none;
+        margin-bottom:18px;
+
     }
 }
